@@ -324,6 +324,9 @@ This test instance of d-portal number <span class="beige_key">{beige_instance_ke
 
 <!--	Footer for dpreview	-->
 #large_footer_dpreview
+{view_tail_white}
+
+#dpreview_footer_old
 <div class="footer_link footer_dpreview">
 	{large_footer_left_dpreview}
 </div><div class="footer_link list footer_dpreview">
