@@ -1,3 +1,8 @@
+Development Portal (2025-01-15 shi)
+==============================
+Display new stats with tables for white version
+
+
 Development Portal (2025-01-09 shi)
 ==============================
 Add social icons to footer
